--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cmake-extras (0.7-0ubuntu1) UNRELEASED; urgency=medium
+
+  * Add formatcode module.
+
+ -- Pete <pete.woods@canonical.com>  Fri, 13 May 2016 16:25:41 +0100
+
 cmake-extras (0.6+16.04.20160215-0ubuntu2) xenial; urgency=medium
 
   * No change rebuild for new cmake
