--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cmake-extras (0.10-0ubuntu1) UNRELEASED; urgency=medium
+
+  * Migrate all modules to unversioned cmake directory.
+
+ -- Pete <pete.woods@canonical.com>  Wed, 07 Dec 2016 15:01:15 +0000
+
 cmake-extras (0.9+17.04.20161202.1-0ubuntu1) zesty; urgency=medium
 
   [ Michi Henning ]
