--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cmake-extras (1.3-0ubuntu1) UNRELEASED; urgency=medium
+
+  * Make GDBus source name generation work like more conventional macros.
+
+ -- Pete <pete.woods@canonical.com>  Fri, 10 Mar 2017 12:21:39 +0000
+
 cmake-extras (1.2+17.04.20170228-0ubuntu1) zesty; urgency=medium
 
   * Add function to compile GSettings schemas. (LP: #1664714)
