--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+cmake-extras (1.4-0ubuntu1) UNRELEASED; urgency=medium
+
+  [ Pete Woods ]
+  * Drop deprecated modules now that no-one is using them any more,
+    fixing bug (LP: #1563573).
+
+ -- Pete <pete.woods@canonical.com>  Mon, 03 Apr 2017 16:01:33 +0100
+
 cmake-extras (1.3+17.04.20170310-0ubuntu1) zesty; urgency=medium
 
   [ Pete ]
